//source $JDE_DIR/Framework/scripts/common.sh;toBashDir $JDE_DIR JDE_BASH;source=$JDE_BASH/IotWebsocket/source/types/proto
//cd $source;#$JDE_BASH/Public/stage/release/protoc --cpp_out . IotFromClient.proto
//protoc --cpp_out . IotFromClient.proto

syntax = "proto3";
package Jde.Iot.FromClient;
//import "google/protobuf/timestamp.proto";
import "IotCommon.proto";

enum ERequest{
	Ping = 0;
}

message Subscribe{
	uint32 request_id=1;
	string opc_id=2;
	repeated Jde.Iot.Proto.ExpandedNodeId nodes=3;
}

message Unsubscribe{
	uint32 request_id=1;
	string opc_id=2;
	repeated Jde.Iot.Proto.ExpandedNodeId nodes=3;
}

message Transmission
{
	repeated MessageUnion messages=1;
}

message MessageUnion
{
	oneof Value
	{
		uint32 session_id=1;
		Subscribe subscribe=2;
		Unsubscribe unsubscribe=3;
	}
}